# osu-chat-bot

./: .gitignore  README.md  ROADMAP.md  config.toml  pyproject.toml
cluster/: Dockerfile  README.md  README_LST.md  config.cluster.toml.example
cluster/scripts/: index_interval.sh  make_offsets.py  render_submit_templates.sh  run.sh  smoke_lstdirect.sh
cluster/submit/: eval_dense.sub  eval_keyword.sub  index_interval.sub  index_many.sub  ner_full.sub  smoke.sub
eval/: README.md  osu_seed.jsonl
notebooks/: osu_chatbot_colab_walkthrough.ipynb
src/osu_chatbot/: __init__.py  config.py
src/osu_chatbot/app/: __init__.py  cli.py  commands.py
src/osu_chatbot/corpus/: __init__.py  chunker.py  markdown.py  parser.py  sources.py  taxonomy.py
src/osu_chatbot/domain/: __init__.py  artifacts.py  models.py
src/osu_chatbot/evaluation/: __init__.py  datasets.py  metrics.py  runner.py
src/osu_chatbot/generation/: __init__.py  answerer.py  ollama.py  prompt.py
src/osu_chatbot/indexing/: __init__.py  embeddings.py  pipeline.py  vector_store.py
src/osu_chatbot/knowledge/: __init__.py  gliner_ner.py  label_profiles.py  links.py  ner.py  normalization.py  terms.py
src/osu_chatbot/quality/: __init__.py  reports.py  stats.py  validation.py
src/osu_chatbot/retrieval/: __init__.py  dense.py  intent.py  lexical.py  ranker.py  (+1 more)
tests/: test_app.py  test_chunker.py  test_config.py  test_evaluation.py  test_indexing.py  test_intent.py  test_links.py  test_markdown.py  test_ner.py  test_normalization.py  test_parser.py  test_quality.py  test_retrieval.py  test_terms.py
