[project]
name = "osu-chat-bot"
version = "0.1.0"
description = "Local osu! wiki RAG prototype with cited answers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client>=1.10.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
entities = [
    "gliner>=0.2.0",
]

[project.scripts]
osu-bot = "osu_chatbot.app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osu_chatbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
